# nextrieve

./: .project  Build  INSTALL  LICENSE  Makefile  Makefile.in  README  README.md  config.h  config.h.in  configure  configure.ac  configure.scan
docs/html/: ntvpod2html
docs/manpages/: ntvcachecfgxml.5  ntvcachecfgxml.pod  ntvcached.1  ntvcached.pod  ntvcheck.1  ntvcheck.pod  ntvdocfilter.1  ntvdocfilter.pod  ntvdtds.5  ntvdtds.pod  ntvhitlistxml.5  ntvhitlistxml.pod  ntvhtmlfilter.1  ntvhtmlfilter.pod  ntvindex.1  ntvindex.pod  ntvindexerxml.5  ntvindexerxml.pod  ntvmailfilter.1  ntvmailfilter.pod  ntvopt.1  ntvopt.pod  ntvpdffilter.1  ntvpdffilter.pod  ntvquerygen.1  ntvquerygen.pod  ntvqueryxml.5  ntvqueryxml.pod  ntvresourcefile.5  ntvresourcefile.pod  ntvsearch.1  ntvsearch.pod  ntvsearchd.1  ntvsearchd.pod  ntvtxtfilter.1  ntvtxtfilter.pod  ntvultralite.1  ntvultralite.pod  pod2manfilt.sh  tutgettingstarted.pod  (+2 more)
expat-1.95.1/: Makefile  config.cache  config.status  libtool
expat-1.95.1/conftools/: mkinstalldirs
expat-1.95.1/examples/: Makefile  doc.c  outline.c
expat-1.95.1/lib/: Makefile  expat.dsp  expat.h  expatlib.dsp  xmlparse.c  xmlrole.c  xmltok.c
expat-1.95.1/xmlwf/: Makefile
skel/htmlsimple/: README.txt  extra-vbls.sh  htmlsimple.res
skel/mailmhonarc/: README.txt  extra-vbls.sh  mailmhonarc.res
src/: Makefile  Makefile.in  bsdsem.h  dlmalloc.c  getopt.c  grepper.c  grok.c  main.c  ncscache.c  ncscache.h  ncsclients.c  ncsclients.h  ncsdbnamemap.c  ncsdbnamemap.h  ncssubdbs.c  ncssubdbs.h  ncssubservers.c  ncssubservers.h  ntvC.c  ntvattr.c  ntvattr.h  ntvbinstuff.c  ntvbitio.h  ntvblkbuf.c  ntvblkbuf.h  ntvbrand.c  ntvcharsets.c  ntvcharsets.h  ntvcharvalidate.h  ntvcheck.c  ntvchunkutils.c  ntvchunkutils.h  ntvcompile.c  ntvcompile.h  ntvdfa.c  ntvdfa.h  ntverror.c  ntverror.h  ntvgreputils.c  ntvgreputils.h  (+58 more)
test/: simple-search.sh  simple-test.sh  testhtml.res  testhtml1.html
zlib-1.1.3/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
(+127 files in other folders)
